@@ -1983,10 +1983,7 @@ BOOT:
 	 * same gtype, we get the mappings for two packages to one gtype, but
 	 * only one mapping (the last and correct one) from type to package.
 	 */
-	G_LOCK (types_by_package);
-	g_hash_table_insert (types_by_package, "Glib::Uint",
-			     (gpointer) G_TYPE_UINT);
-	G_UNLOCK (types_by_package);
+	gperl_register_fundamental_alias (G_TYPE_UINT, "Glib::Uint");
 
 
 =for apidoc
